# pybusta

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
deployment/: README.md  deploy.sh  pybusta-cli.service  pybusta.service
docs/: OPDS.md
src/pybusta/: __init__.py
src/pybusta/cli/: __init__.py  main.py
src/pybusta/core/: book_index.py  database.py  models.py
src/pybusta/opds/: __init__.py  feeds.py  models.py  routes.py
src/pybusta/web/: __init__.py  main.py
src/pybusta/web/templates/: base.html  error.html  index.html  search_results.html  stats.html
tests/: __init__.py  test_cli.py  test_models.py  test_opds.py
